--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,14 +1,14 @@
-name: Java CI with Maven
+name: cosmic-pull-request-build
 
 on:
   workflow_dispatch:
     inputs:
       branch:
-        description: 'branch'
+        description: 'Branch to be built'
         required: false
         default: 'master'
       tests:
-        description: 'Integration tests'
+        description: 'Tests to run'
         required: false
         default: |
           smoke/test_delete_account.py
@@ -31,9 +31,7 @@ on:
 
 jobs:
   maven-build:
-
     runs-on: self-hosted
-
     steps:
       - uses: actions/checkout@v2
       - name: Set up JDK 1.8
