--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,27 @@
 name: cosmic-pull-request-build
 
 on:
+  workflow_dispatch:
+    inputs:
+      tests:
+        description: 'Tests to run'
+        required: false
+        default: |
+          smoke/test_delete_account.py
+          smoke/test_ip_exclusion_list.py
+          smoke/test_loadbalance.py
+          smoke/test_password_and_dnsmasq_service.py
+          smoke/test_privategw_acl.py
+          smoke/test_public_ip_acl.py
+          smoke/test_release_ip.py
+          smoke/test_router_ip_tables_policies.py
+          smoke/test_vpc_ip_tables_policies.py
+          smoke/test_ssvm.py
+          smoke/test_vpc_redundant.py
+          smoke/test_vpc_router_nics.py
+          smoke/test_vpc_vpn.py
   pull_request:
+  push:
 
 jobs:
   maven-build:
@@ -18,3 +38,23 @@ jobs:
           echo "<settings><profiles><profile><id>beta-nexus</id><repositories><repository><id>beta-nexus</id><name>beta-nexus</name><url>https://beta-nexus.mcc.schubergphilis.com/content/groups/public</url></repository></repositories></profile></profiles><activeProfiles><activeProfile>beta-nexus</activeProfile></activeProfiles></settings>" | tee ~/.m2/settings.xml
       - name: Build with Maven
         run: mvn -B -f pom.xml clean install -U -Psystemvm -Psonar-ci-cosmic -Dcosmic.dir="${GITHUB_WORKSPACE}" -Dlog.file.management.server="/var/log/cosmic/management/management.log" -Dlog.rotation.management.server="/var/log/cosmic/management/management-%d{yyyy-MM-dd}.log.gz" -Dcosmic.tests.mockdb=true
+  prepare-setup-infra:
+    runs-on: self-hosted
+    steps:
+      - name: Prepare infrastructure for integration tests
+        run: echo "TODO"
+      - name: Setup infrastructure for integration tests
+        run: echo "TODO"
+      - name: Deploy datacenter
+        run: echo "TODO"
+  tests:
+    runs-on: self-hosted
+    steps:
+      - name: Run integration tests
+  reporting:
+    runs-on: self-hosted
+    steps:
+      - name: Sonar analysis
+        run: echo "TODO"
+      - name: Report, Archive and Cleanup
+        run: echo "TODO"
